# openssl-cmake

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
test/: CMakeLists.txt  main.cpp
